--- a/brainfork/brainfork.csproj
+++ b/brainfork/brainfork.csproj
@@ -9,4 +9,10 @@
     <Copyright>bytespacegames</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DSharpPlus" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0" />
+  </ItemGroup>
+
 </Project>
